tests/paczka1/fuzzy1/76755571.err
Error in line 1: 22RzXrJ A213 55,8
Error in line 12: A213 A522 77,8
Error in line 18: AXi S210 93,6
Error in line 23: AXi A605 9,8
Error in line 22: 3KkoA A522 46,8
Error in line 27: AXi S210 54,5
Error in line 33: AXi A213 17,5
